TestSuite/errors/err0318.pas
type
  T = class
    procedure operator+=(a, b:T) := exit;
  end;

begin
end.